fix(imageSlider): adjust figcaption on mobile

--- a/resources/scss/components/siema.scss
+++ b/resources/scss/components/siema.scss
@@ -2,6 +2,7 @@
     &__wrapper{
         position: relative;
         padding-bottom: 16px;
+        margin: 20px auto;
     }
     &__arrow{
         position: absolute;
@@ -76,8 +77,16 @@
             font-size: 12px;
             line-height: 12px;
             margin: 4px 4px 4px 4px;
+            @include ipadOrSmaller{
+                font-size: 10px;
+            }
+
             p{
                 margin: 0;
+            }
+
+            a,a:hover,a:visited{
+                color: $color-main;
             }
         }
     }
